--- a/webroot/mobile/html/jifen/html/help.html
+++ b/webroot/mobile/html/jifen/html/help.html
@@ -16,7 +16,7 @@
     <body>
         <header>
             <div class="inner">
-                <h1 class="logintitle" style="float: left;width: 1.2rem;" onclick="history.go(-1)"></h1><h1>帮助中心</h1>
+                <h1 class="logintitle" style="float: left;width: 1.2rem;" onclick="history.go(-1）"></h1><h1>帮助中心</h1>
             </div>
         </header>
         <div class="wraper mt8">
@@ -24,170 +24,187 @@
                 <ul>
                     <li>
                         <div class="title inner flex">
-                            <h3>1.&nbsp;&nbsp;流量充值相关问题说明</h3>
+                            <h3>1.&nbsp;&nbsp;&nbsp;&nbsp;流量充值相关问题说明</h3>
                             <i class="arrow"></i>
                         </div>
                         <div class="con inner">
                             <div class="pd10">
-                                <div class="sub-title"><i class="flag">1)&nbsp;&nbsp;</i>流量充值支持哪些地区？？</div>
+                                <div class="sub-title"><i class="flag">1）&nbsp;&nbsp;</i>流量充值支持哪些地区？？</div>
                                 <div class="sub-title con-cont clearfix">
                                     <div class="imgmark fl"><img src="../images/da.png"/></div>
                                     <p class="fl">目前流量充值只支持全国流量包，当月生效，月底失效。</p>
                                 </div>
                             </div>
                             <div class="pd10">
-                                <div class="sub-title"><i class="flag">2)&nbsp;&nbsp;</i>什么是省内流量，什么是全国流量？</div>
+                                <div class="sub-title"><i class="flag">2）&nbsp;&nbsp;</i>什么是省内流量，什么是全国流量？</div>
                                 <div class="sub-title con-cont clearfix">
                                     <div class="imgmark fl"><img src="../images/da.png"/></div>
                                     <p class="fl">省内流量指该流量只可在手机号码归属地范围内使用，全国流量是指该流量全国范围都可以使用。</p>
                                 </div>
                             </div>
                             <div class="pd10">
-                                <div class="sub-title"><i class="flag">3)&nbsp;&nbsp;</i>我订购的流量套餐可以次月使用吗？</div>
+                                <div class="sub-title"><i class="flag">3）&nbsp;&nbsp;</i>我订购的流量套餐可以次月使用吗？</div>
                                 <div class="sub-title con-cont clearfix">
                                     <div class="imgmark fl"><img src="../images/da.png"/></div>
-                                    <p class="fl">当月订购的流量套餐仅支待当月使用。</p>
+                                    <p class="fl">当月订购的流量套餐仅支持当月使用。</p>
                                 </div>
                             </div>
                             <div class="pd10">
-                                <div class="sub-title"><i class="flag">4)&nbsp;&nbsp;</i>我订购了流量，我本身也有流量，那么这个是怎么扣？</div>
+                                <div class="sub-title"><i class="flag">4）&nbsp;&nbsp;</i>我订购了流量，我本身也有流量，那么这个是怎么扣？</div>
                                 <div class="sub-title con-cont clearfix">
                                     <div class="imgmark fl"><img src="../images/da.png"/></div>
                                     <p class="fl">根据运营商规定：优先消耗订购流量，然后再进行套餐流量消耗。</p>
                                 </div>
                             </div>
                             <div class="pd10">
-                                <div class="sub-title"><i class="flag">5)&nbsp;&nbsp;</i>我订购的流量已经收到短信，但实际还没到账？</div>
+                                <div class="sub-title"><i class="flag">5）&nbsp;&nbsp;</i>我订购的流量已经收到短信，但实际还没到账？</div>
                                 <div class="sub-title con-cont clearfix">
                                     <div class="imgmark fl"><img src="../images/da.png"/></div>
                                     <p class="fl">可能是因为运营商系统差异问题，少量客户会存在到账比短信偏快的情况，不过24小时内一定会到账，可登录网上营业厅进行确认。</p>
                                 </div>
                             </div>
                             <div class="pd10">
-                                <div class="sub-title"><i class="flag">6)&nbsp;&nbsp;</i>流量充值长时间不到账怎么办？</div>
+                                <div class="sub-title"><i class="flag">6）&nbsp;&nbsp;</i>流量充值长时间不到账怎么办？</div>
                                 <div class="sub-title con-cont clearfix">
                                     <div class="imgmark fl"><img src="../images/da.png"/></div>
-                                    <p class="fl">月初、月末充值高峰时段，用户较多，到账时间有一定的延迟,若是长时间不到账，请拨打客服热线：0755-29637465，邮箱 flow@toprays.com</p>
+                                    <p class="fl">月初、月末充值高峰时段，用户较多，到账时间有一定的延迟，若是长时间不到账，请拨打客服热线：0755-29637465，邮箱：flow@toprays.com</p>
                                 </div>
                             </div>
                             <div class="pd10">
-                                <div class="sub-title"><i class="flag">7)&nbsp;&nbsp;</i>流量充值失败怎么办？</div>
+                                <div class="sub-title"><i class="flag">7）&nbsp;&nbsp;</i>流量充值失败怎么办？</div>
                                 <div class="sub-title con-cont clearfix">
                                     <div class="imgmark fl"><img src="../images/da.png"/></div>
-                                    <p class="fl">如果充值高峰或者系统升级，会有个别订单失败，我们会及时为用户办理退款，款项会原路返回用户支付时所用的账号内，一般3-5个工作日到账，如遇节假日延后，请您及时查询账户信息。如有疑问请拨打客服热线：0755-29637465 邮箱：flow@toprays.com。</p>
+                                    <p class="fl">如果充值高峰或者系统升级，会有个别订单失败，我们会及时为用户办理退款，款项会原路返回用户支付时所用的账号内，一般3-5个工作日到账，如遇节假日延后，请您及时查询账户信息。如有疑问请拨打客服热线：0755-29637465，邮箱：flow@toprays.com。</p>
                                 </div>
                             </div>
                             <div class="pd10">
-                                <div class="sub-title"><i class="flag">8)&nbsp;&nbsp;</i>流量充值成功无短信通知怎么办？</div>
+                                <div class="sub-title"><i class="flag">8）&nbsp;&nbsp;</i>流量充值成功无短信通知怎么办？</div>
                                 <div class="sub-title con-cont clearfix">
                                     <div class="imgmark fl"><img src="../images/da.png"/></div>
-                                    <p class="fl">请您发送短信或电话至运营商查询，中国移动发送cx11到10086或者登录移动网上营业厅查询套餐明细；中国联通发送CXLL到10010或登录联通网上营业厅查询套餐明细;中国电信发送CXLL或108到10001或登录电信网上营业厅查询套餐明细；如有疑问请拨打客服热线：0755-29637465 邮箱：flow@toprays.com。</p>
+                                    <p class="fl">请您发送短信或电话至运营商查询，中国移动发送cx11到10086或者登录移动网上营业厅查询套餐明细；中国联通发送CXLL到10010或登录联通网上营业厅查询套餐明细；中国电信发送CXLL或108到10001或登录电信网上营业厅查询套餐明细；如有疑问请拨打客服热线：0755-29637465，邮箱：flow@toprays.com。</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+<!--                    <li>
+                        <div class="title inner flex">
+                            <h3>2.&nbsp;&nbsp;&nbsp;&nbsp;话费充值相关问题说明</h3>
+                            <i class="arrow"></i>
+                        </div>
+                        <div class="con inner">
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">1）&nbsp;&nbsp;</i>如何查询话费是否已经到账？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">您兑换成功后，工作人员会在1个工作日处理，充值成功会收到短信通知，您也可以拨打相应运营商客服电话进行查询。</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">2）&nbsp;&nbsp;</i>话费充值长时间不到账怎么办？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">月初、月末充值高峰时段，用户较多，到账时间有一定的延迟，若是长时间不到账，请拨打客服热线：0755-29637465，邮箱 flow@toprays.com。</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">3）&nbsp;&nbsp;</i>话费充值失败怎么办？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">如果充值高峰或者系统升级，会有个别订单失败，我们会及时为用户办理退款，款项会原路返回用户支付时所用的账号内，一般3-5个工作日到账，遇到节假日延后，请您及时查询账户信息。如有问题请拨打客服热线：0755-29637465 邮箱： flow@toprays.com。</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>-->
+                    <li>
+                        <div class="title inner flex">
+                            <h3>2.&nbsp;&nbsp;&nbsp;&nbsp;积分兑换相关问题说明</h3>
+                            <i class="arrow"></i>
+                        </div>
+                        <div class="con inner">
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">1）&nbsp;&nbsp;</i>如何查询我的积分？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">
+                                        移动用户发送JF到10658999查询(备注：如果查询没有积分反馈，说明该地区没有开通积分业务）<br />
+                                        联通用户发送JF到10659858查询(备注：如果查询没有积分反馈，说明该地区没有开通积分业务）<br />
+                                        电信用户发送105或cxjf到10010查询(备注：如果查询没有积分反馈，说明该地区没有开通积分业务）</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">2）&nbsp;&nbsp;</i>如何知道积分兑换的指令？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">首页积分查询可看到相应的指令，也可以点击这里！（<a href="javascript:location.href='integral_query.html?channelId='+$.func.getUrlParam('channelId'）" style="text-decoration: underline; color: blue">《积分查询页面》</a>）</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">3）&nbsp;&nbsp;</i>如何知道兑换换呗的串码？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">发送积分兑换指令后，会收到信息，根据相应提示操作最后可获得一个16位数字的串码，详细步骤请看这里（<a href="javascript:location.href='guide.html?channelId='+$.func.getUrlParam('channelId'）" style="text-decoration: underline; color: blue">《新手教程页面》</a>）</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">4）&nbsp;&nbsp;</i>如果手机号码现在预约销户了，积分还能兑换吗？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">手机账户在预约销户的状态下，积分账户会冻结，您就不能使用积分兑换业务了；如果您手机取消预约销户，积分账户就会解除冻结，您可以重新使用积分业务。</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">5）&nbsp;&nbsp;</i>如果手机号码现在已经正式销户/欠费销户了，积分还能兑换吗？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">手机销户后，积分账户余额将会自动清零。您重新入网、重新开户后，视为新入网客户。</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">6）&nbsp;&nbsp;</i>如果手机号码停机了，积分还能兑换吗？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">如果您的手机是停机状态，包括欠费停机、强制停机、申请停机和高额停机、半停，您的积分账户就会冻结，暂时不能使用积分业务。</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">7）&nbsp;&nbsp;</i>如果我办理过户，积分是否可以继续累积？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">可以的，您办理过户后，原账户中的积分均转入新的客户账户中，转入后的促销回馈积分有效期不变。新账户中的积分，按新账户对应的星级继续累积消费积分。</p>
+                                </div>
+                            </div>
+                            <div class="pd10">
+                                <div class="sub-title"><i class="flag">8）&nbsp;&nbsp;</i>在积分商城兑换的礼品是否可以提供发票？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">由于积分兑换是三大运营商（中国移动、中国联通、中国电信）为答谢广大客户所提供的回馈性质的服务，并非现金买卖礼品，因此您在积分商城使用积分兑换或使用积分+现金模式兑换礼品，积分部分均不提供发票。敬请谅解！</p>
                                 </div>
                             </div>
                         </div>
                     </li>
                     <li>
                         <div class="title inner flex">
-                            <h3>2.什么是省内流量，什么是全国流量？</h3>
+                            <h3>3.&nbsp;&nbsp;&nbsp;&nbsp;现金提现相关问题说明</h3>
                             <i class="arrow"></i>
                         </div>
                         <div class="con inner">
                             <div class="pd10">
-                                <p>省内流量指该流量只可在手机号码归属地范围内使用，全国流量是指该流量全国范围都可以使用。</p>
+                                <div class="sub-title"><i class="flag">1）&nbsp;&nbsp;</i>我兑换提现成功，如何收取现金？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">我们会根据您兑换现金时所填写的微信账号或支付宝账号给您付款，请认真填写账号信息。</p>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="title inner flex">
-                            <h3>3.我订购的流量套餐可以次月使用吗？</h3>
-                            <i class="arrow"></i>
-                        </div>
-                        <div class="con inner">
                             <div class="pd10">
-                                <p>当月订购的流量套餐仅支持当月使用。</p>
+                                <div class="sub-title"><i class="flag">2）&nbsp;&nbsp;</i>我兑换提现成功，为何收不到？</div>
+                                <div class="sub-title con-cont clearfix">
+                                    <div class="imgmark fl"><img src="../images/da.png"/></div>
+                                    <p class="fl">可能是因为您填写的账号信息错误导致，您可进入订单详情中查看订单状态，如有疑问请拨打客服热线：0755-29637465，邮箱：flow@toprays.com。</p>
+                                </div>
                             </div>
                         </div>
                     </li>
-                    <li>
-                        <div class="title inner flex">
-                            <h3>4.积分兑换相关说明</h3>
-                            <i class="arrow"></i>
-                        </div>
-                        <div class="con inner">
-                            <div class="pd10">
-                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
-                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
-                                <p>3)过期代金券自动作废，不补不退。</p>
-                                <p>4)代金券一经兑换，不退不换。</p>
-                                <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话0755-29637465。</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="title inner flex">
-                            <h3>5.如何支付？</h3>
-                            <i class="arrow"></i>
-                        </div>
-                        <div class="con inner">
-                            <div class="pd10">
-                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
-                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
-                                <p>3)过期代金券自动作废，不补不退。</p>
-                                <p>4)代金券一经兑换，不退不换。</p>
-                                <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话0755-29637465。</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="title inner flex">
-                            <h3>6.为什么支付时不用支付密码？</h3>
-                            <i class="arrow"></i>
-                        </div>
-                        <div class="con inner">
-                            <div class="pd10">
-                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
-                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
-                                <p>3)过期代金券自动作废，不补不退。</p>
-                                <p>4)代金券一经兑换，不退不换。</p>
-                                <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话0755-29637465。</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="title inner flex">
-                            <h3>7.若账户余额为0，还能支付吗？</h3>
-                            <i class="arrow"></i>
-                        </div>
-                        <div class="con inner">
-                            <div class="pd10">
-                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
-                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
-                                <p>3)过期代金券自动作废，不补不退。</p>
-                                <p>4)代金券一经兑换，不退不换。</p>
-                                <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话0755-29637465。</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="title inner flex">
-                            <h3>8.账户余额不足订单金额时，还能支付吗？</h3>
-                            <i class="arrow"></i>
-                        </div>
-                        <div class="con inner">
-                            <div class="pd10">
-                                <p>1)代金券有效期不小于90天，具体以账户内的代金券显示的有效期为准，请您在有效期内使用。</p>
-                                <p>2)到金券可分多次使用，每次使用不限金额。</p>
-                                <p>3)过期代金券自动作废，不补不退。</p>
-                                <p>4)代金券一经兑换，不退不换。</p>
-                                <p>5)代金券支付金额不开具发票。</p>
-                                <p>6)更多请咨询客服电话0755-29637465。</p>
-                            </div>
-                        </div>
-                    </li>
+                    
                 </ul>
             </div>
         </div> 
