--- a/webroot/mobile/html/train-1.html
+++ b/webroot/mobile/html/train-1.html
@@ -67,7 +67,7 @@
 			</div>
 			<!--分类--end-->
 			<div class="train-items-box bgff">
-				<div class="title">
+				<div class="train-common-title">
 					<div class="inner title-box flex flex_jusitify">
 						<h3><i class="iconfont ico">&#xe6af;</i> 推荐课程</h3>
 						<a href="#this" class="iconfont eleblock"> &#xe6b6;</a>
@@ -110,9 +110,9 @@
 			</div>
 			<!--d订阅-->
 			<div class="train-items-box bgff mt20">
-				<div class="title">
+				<div class="train-common-title">
 					<div class="inner title-box flex flex_jusitify">
-						<h3><i class="iconfont ico">&#xe6af;</i> 订阅内容</h3>
+						<h3><i class="iconfont ico">&#xe6af;</i> 免费试听</h3>
 						<a href="#this" class="iconfont eleblock"> &#xe6b6;</a>
 					</div>
 				</div>
@@ -147,6 +147,76 @@
 									</div>
 								</div>
 							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<!--订阅内容-->
+			<div class="train-booking-box bgff mt20">
+				<div class="train-common-title">
+					<div class="inner title-box flex flex_jusitify">
+						<h3><i class="iconfont ico">&#xe6af;</i> 订阅内容</h3>
+						<a href="#this" class="iconfont eleblock"> &#xe6b6;</a>
+					</div>
+				</div>
+				<div class="con">
+					<ul class="outerblock">
+						<li class="tab-con-box tab-booking">
+								<div class="booking-items">
+									<div class="nav-title flex">
+										<div class="avatar">
+											<img src='../images/home-pic.png' class="responseimg"/>
+										</div>
+										<div class="avatar-info">
+											<span>陆涛</span> | 
+											<span>和灵资本</span> | 
+											<span>创始人</span>
+										</div>
+										<div class="price color-items">￥888</div>
+									</div>
+									<div class="con">
+										<h3 class="title">并购中对目标公司有哪些好的评估方法方法方法？</h3>
+										<p>四大专业导师亲自授课，向您讲述并购中好的评估方法，帮助你在并购中少走弯路和简述……</p>
+									</div>
+								</div>
+						</li>
+						<li class="tab-con-box tab-booking">
+								<div class="booking-items">
+									<div class="nav-title flex">
+										<div class="avatar">
+											<img src='../images/home-pic.png' class="responseimg"/>
+										</div>
+										<div class="avatar-info">
+											<span>陆涛</span> | 
+											<span>和灵资本</span> | 
+											<span>创始人</span>
+										</div>
+										<div class="price color-items">￥888</div>
+									</div>
+									<div class="con">
+										<h3 class="title">并购中对目标公司有哪些好的评估方法方法方法？</h3>
+										<p>四大专业导师亲自授课，向您讲述并购中好的评估方法，帮助你在并购中少走弯路和简述……</p>
+									</div>
+								</div>
+						</li>
+						<li class="tab-con-box tab-booking">
+								<div class="booking-items">
+									<div class="nav-title flex">
+										<div class="avatar">
+											<img src='../images/home-pic.png' class="responseimg"/>
+										</div>
+										<div class="avatar-info">
+											<span>陆涛</span> | 
+											<span>和灵资本</span> | 
+											<span>创始人</span>
+										</div>
+										<div class="price color-items">￥888</div>
+									</div>
+									<div class="con">
+										<h3 class="title">并购中对目标公司有哪些好的评估方法方法方法？</h3>
+										<p>四大专业导师亲自授课，向您讲述并购中好的评估方法，帮助你在并购中少走弯路和简述……</p>
+									</div>
+								</div>
 						</li>
 					</ul>
 				</div>
