--- a/webroot/mobile/html/train-course-detail.html
+++ b/webroot/mobile/html/train-course-detail.html
@@ -71,6 +71,16 @@
                     </div>
                 </div>
             </div>
+              <div class="train-intro-detail bgff mt20">
+                <div class="title flex flex_jusitify  inner" id="down">
+                    <h3 class="">PPT课程</h3>
+                </div>
+                <div class="con inner ppt-box">
+                   <img src="../images/train-detail01.jpg"/>
+                    <img src="../images/train-detail01.jpg"/>
+                     <img src="../images/train-detail01.jpg"/>
+                </div>
+            </div>
         </div>
         <script type="text/javascript">
             function fixedSeconds(value) {
