--- a/webroot/mobile/html/train-charge.html
+++ b/webroot/mobile/html/train-charge.html
@@ -27,36 +27,54 @@
 					<input type="text" placeholder="请输入充值金额" />
 				</div>
 				<div class="discount-charge inner" id="charge">
-					<div class="discount-title">优惠套餐 <span class="really-count color-items">送<i>10.00</i>元</span></div>
+					<div class="discount-title">优惠套餐 <!--<span class="really-count color-items">送<i>10.00</i>元</span>--></div>
 					<ul class="list-line clearfix">
 						<li class="active">
 							<div class="items flex flex_center">
-								<span>￥100.00</span>
+								<div class="aligncenter">
+									<h3>￥100.00</h3>
+									<span class="really-count">送<i>10.00</i>元</span>
+								</div>
 							</div>
 						</li>
 						<li>
 							<div class="items  flex flex_center">
-								<span>￥100.00</span>
+								<div class="aligncenter">
+									<h3>￥100.00</h3>
+									<span class="really-count">送<i>10.00</i>元</span>
+								</div>
 							</div>
 						</li>
 						<li>
 							<div class="items flex flex_center">
-								<span>￥100.00</span>
+								<div class="aligncenter">
+									<h3>￥100.00</h3>
+									<span class="really-count">送<i>10.00</i>元</span>
+								</div>
 							</div>
 						</li>
 						<li>
 							<div class="items flex flex_center">
-								<span>￥100.00</span>
+								<div class="aligncenter">
+									<h3>￥100.00</h3>
+									<span class="really-count">送<i>10.00</i>元</span>
+								</div>
 							</div>
 						</li>
 						<li>
 							<div class="items  flex flex_center">
-								<span>￥100.00</span>
+								<div class="aligncenter">
+									<h3>￥100.00</h3>
+									<span class="really-count">送<i>10.00</i>元</span>
+								</div>
 							</div>
 						</li>
 						<li>
 							<div class="items flex flex_center">
-								<span>￥100.00</span>
+								<div class="aligncenter">
+									<h3>￥100.00</h3>
+									<span class="really-count">送<i>10.00</i>元</span>
+								</div>
 							</div>
 						</li>
 					</ul>
