--- a/webroot/mobile/html/train-detail.html
+++ b/webroot/mobile/html/train-detail.html
@@ -50,8 +50,9 @@
 				<div class="courselist">
 					<ul class="outerblock">
 						<li class="items">
+							<a href="#this" class="eleblock">
 							<h3 class="course-title flex flex_jusitify">
-								<a class="eleblock left-info flex box_start"><i class="serial ">01</i><div>并购中对目标公司有哪些并购中对目标公司有哪些好的评估方法方法方好的评估方法</div></a>
+								<div class="eleblock left-info flex box_start"><i class="serial ">01</i><div>并购中对目标公司有哪些并购中对目标公司有哪些好的评估方法方法方好的评估方法</div></div>
 								<div class="iconfont r-ico">&#xe667;</div>
 							</h3>
 							<div class="couser-pro flex">
@@ -62,10 +63,12 @@
 									<span>创始人</span>
 								</div>
 							</div>
+							</a>
 						</li>
 						<li class="items">
+							<a href="#this" class="eleblock">
 							<h3 class="course-title flex flex_jusitify">
-								<a class="eleblock  box_start left-info flex"><i class="serial ">02</i><div>并购中对目标公司有哪些好的评估方法</div></a>
+								<div class="eleblock left-info flex box_start"><i class="serial ">01</i><div>并购中对目标公司有哪些并购中对目标公司有哪些好的评估方法方法方好的评估方法</div></div>
 								<div class="iconfont r-ico">&#xe667;</div>
 							</h3>
 							<div class="couser-pro flex">
@@ -76,10 +79,12 @@
 									<span>创始人</span>
 								</div>
 							</div>
+							</a>
 						</li>
 						<li class="items read">
+							<a href="#this" class="eleblock">
 							<h3 class="course-title flex flex_jusitify">
-								<a class="eleblock  box_start left-info flex"><i class="serial ">03</i><div>并购中对目标公司有哪些并购中对目标公司有哪些好的评估方法方法方好的评估方法</div></a>
+								<div class="eleblock left-info flex box_start"><i class="serial ">01</i><div>并购中对目标公司有哪些并购中对目标公司有哪些好的评估方法方法方好的评估方法</div></div>
 								<div class="iconfont r-ico">&#xe667;</div>
 							</h3>
 							<div class="couser-pro flex">
@@ -90,6 +95,7 @@
 									<span>创始人</span>
 								</div>
 							</div>
+							</a>
 						</li>
 					</ul>
 				</div>
