--- a/webroot/mobile/html/api_test.html
+++ b/webroot/mobile/html/api_test.html
@@ -52,6 +52,7 @@
     <li onclick="LEMON.sys.closeLOC()">LEMON.sys.closeLOC()关闭缓存</li>
     <li onclick="LEMON.sys.showKeyboard()">LEMON.sys.showKeyboard()显示键盘 </li>
     <li onclick="LEMON.sys.hideKeyboard()">LEMON.sys.hideKeyboard() 关闭键盘</li>
+    <li onclick="LEMON.sys.storeUrl('/upload/news/mp3/2016-11-24/5836b4f8d5b04.mp3', 'audio/mpeg')">LEMON.sys.storeUrl('/upload/news/mp3/2016-11-24/5836b4f8d5b04.mp3', 'audio/mpeg') 缓存音频</li>
 
     <!--
     <li onclick="LEMON.share.QQ(callback)">LEMON.share.QQ(callback) 分享QQ空间</li>
