--- a/webroot/mobile/html/train-course-detail.html
+++ b/webroot/mobile/html/train-course-detail.html
@@ -56,7 +56,7 @@
              </div>
              <!--wraper--end-->
              </div>
-             <div class="train-audio-box sticky fixed-audio-box"  id="oaudio">
+             <div class="train-audio-box sticky bgff"  id="oaudio">
                 <div class="con">
                     <div class="audio-box bgff">
                         <div class="audio-info flex flex_jusitify">
