--- a/webroot/mobile/html/activity-nopass.html
+++ b/webroot/mobile/html/activity-nopass.html
@@ -29,11 +29,14 @@
 				<div class='aligncenter'>
 					<h3 class="color-items iconfont">&#xe67a;</h3>
 					<p class="tip color-items">很遗憾，你提交的审核未通过</p>
-					<div class='active-des-pass'><span class="bold">活动名称：</span>第二届并购帮峰会</div>
-					<div class="active-des-pass"><span class="bold">未通过原因：</span><i class='color-items'>不符合参会资格</i></div>
 				</div>
+				<div class='activity_nopassed-box inner'>
+					<div class='active-des-pass flex box_start'><span class="bold">活动名称：</span><div class="right-info">第二届并购帮峰会第二届并购帮峰会第二届并购帮峰会第二届并购帮峰会</div></div>
+					<div class="active-des-pass flex box_start"><span class="bold">未通过原因：</span><div class='color-items right-info'>不符合参会资格不符合参会资格不符合参会资格不符合参会资格</div></div>
+				
 				<div class="activity-nopass-img">
 					<img src="../images/activity_nopass.png" />
+				</div>
 				</div>
 			</div>
 		</div>
