--- a/webroot/mobile/html/activity-enroll_more2.html
+++ b/webroot/mobile/html/activity-enroll_more2.html
@@ -47,8 +47,8 @@
 				<h3 class="choosed-box-title">已选同行人</h3>
 				<ul>
 					<li class="choosed-box-items">
-						<div class="chooseplace-info flex flex_jusitify">
-							<div><span class="user-name">高一波</span> <span>CEO</span></div>
+						<div class="chooseplace-info flex flex_jusitify box_start">
+							<div class="flex box_start"><span class="user-name">高一波</span> <div class="job">深圳市深圳市柠檬智慧咨询管理有限公司CEO</div></div>
 							<div class='r-info'><i class="iconfont">&#xe67b;</i></div>
 						</div>
 						<div class="chooseplace-otherinfo flex box_start">
@@ -59,24 +59,12 @@
 						</div>
 					</li>
 					<li class="choosed-box-items">
-						<div class="chooseplace-info flex flex_jusitify">
-							<div><span class="user-name">高一波</span> <span>CEO</span></div>
+						<div class="chooseplace-info flex flex_jusitify box_start">
+							<div class="flex box_start"><span class="user-name">高一波</span> <div class="job">深圳市深圳市柠檬智慧咨询管理有限公司CEO</div></div>
 							<div class='r-info'><i class="iconfont">&#xe67b;</i></div>
 						</div>
 						<div class="chooseplace-otherinfo flex box_start">
 							<span class="l-info">公&nbsp;&nbsp;&nbsp;&nbsp;司</span> <div class="r-info">深圳市柠檬智慧咨询管理有限公司深圳市柠檬智慧咨询管理有限公司深圳市柠檬智慧咨询管理有限公司深圳市柠檬智慧咨询管理有限公司</div>
-						</div>
-						<div class="chooseplace-otherinfo">
-							<span class="l-info">手机号</span> <span>15013797562</span>
-						</div>
-					</li>
-					<li class="choosed-box-items">
-						<div class="chooseplace-info flex flex_jusitify">
-							<div><span class="user-name">高一波</span> <span>CEO</span></div>
-							<div class='r-info'><i class="iconfont">&#xe67b;</i></div>
-						</div>
-						<div class="chooseplace-otherinfo flex box_start">
-							<span class="l-info">公&nbsp;&nbsp;&nbsp;&nbsp;司</span> <div class="r-info">深圳市柠檬智慧咨询管理有限公司</div>
 						</div>
 						<div class="chooseplace-otherinfo">
 							<span class="l-info">手机号</span> <span>15013797562</span>
